--- a/src/main/resources/templates/pages/master/product/add.html
+++ b/src/main/resources/templates/pages/master/product/add.html
@@ -69,134 +69,21 @@
                                 </div>
                             </div>
                             <!-- Description -->
-                            <div>
-                                <label class="form-label">Description (Optional)</label>
-                                <div class="form-control p-0 pt-1">
-                                    <div class="comment-toolbar border-0 border-bottom">
-                                        <div class="d-flex justify-content-start">
-                                <span class="ql-formats me-0">
-                                  <button class="ql-bold"></button>
-                                  <button class="ql-italic"></button>
-                                  <button class="ql-underline"></button>
-                                  <button class="ql-list" value="ordered"></button>
-                                  <button class="ql-list" value="bullet"></button>
-                                  <button class="ql-link"></button>
-                                  <button class="ql-image"></button>
-                                </span>
-                                        </div>
-                                    </div>
-                                    <input type="text" name="productBrand" th:value="${product.productBrand}">
-                                    <div class="comment-editor border-0 pb-4" id="ecommerce-category-description"></div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <!-- /Product Information -->
                     <!-- Media -->
-                    <div class="card mb-4">
-                        <div class="card-header d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0 card-title">Media</h5>
-                            <a href="javascript:void(0);" class="fw-medium">Add media from URL</a>
-                        </div>
-                        <div class="card-body">
-                            <form action="/upload" class="dropzone needsclick" id="dropzone-basic">
-                                <div class="dz-message needsclick">
-                                    <p class="fs-4 note needsclick pt-3 mb-1">Drag and drop your image here</p>
-                                    <p class="text-muted d-block fw-normal mb-2">or</p>
-                                    <span class="note needsclick btn bg-label-primary d-inline" id="btnBrowse"
-                                    >Browse image</span
-                                    >
-                                </div>
-                                <div class="fallback">
-                                    <input name="file" type="file" />
-                                </div>
-                            </form>
-                        </div>
-                    </div>
                     <!-- /Media -->
                     <!-- Variants -->
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h5 class="card-title mb-0">Variants</h5>
-                        </div>
-                        <div class="card-body">
-                            <form class="form-repeater">
-                                <div data-repeater-list="group-a">
-                                    <div data-repeater-item>
-                                        <div class="row">
-                                            <div class="mb-3 col-4">
-                                                <label class="form-label" for="form-repeater-1-1">Options</label>
-                                                <select id="form-repeater-1-1" class="select2 form-select" data-placeholder="Size">
-                                                    <option value="">Size</option>
-                                                    <option value="size">Size</option>
-                                                    <option value="color">Color</option>
-                                                    <option value="weight">Weight</option>
-                                                    <option value="smell">Smell</option>
-                                                </select>
-                                            </div>
-
-                                            <div class="mb-3 col-8">
-                                                <label class="form-label invisible" for="form-repeater-1-2">Not visible</label>
-                                                <input
-                                                        type="number"
-                                                        id="form-repeater-1-2"
-                                                        class="form-control"
-                                                        placeholder="Enter size" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div>
-                                    <button class="btn btn-primary" data-repeater-create>Add another option</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
                     <!-- /Variants -->
                     <!-- Inventory -->
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h5 class="card-title mb-0">Inventory</h5>
+                            <h5 class="card-title mb-0">Stock</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <!-- Navigation -->
-                                <div class="col-12 col-md-4 mx-auto card-separator">
-                                    <div class="d-flex justify-content-between flex-column mb-3 mb-md-0 pe-md-3">
-                                        <ul class="nav nav-align-left nav-pills flex-column">
-                                            <li class="nav-item">
-                                                <button class="nav-link py-2 active" data-bs-toggle="tab" data-bs-target="#restock">
-                                                    <i class="ti ti-box me-2"></i>
-                                                    <span class="align-middle">Restock</span>
-                                                </button>
-                                            </li>
-                                            <li class="nav-item">
-                                                <button class="nav-link py-2" data-bs-toggle="tab" data-bs-target="#shipping">
-                                                    <i class="ti ti-car me-2"></i>
-                                                    <span class="align-middle">Shipping</span>
-                                                </button>
-                                            </li>
-                                            <li class="nav-item">
-                                                <button class="nav-link py-2" data-bs-toggle="tab" data-bs-target="#global-delivery">
-                                                    <i class="ti ti-world me-2"></i>
-                                                    <span class="align-middle">Global Delivery</span>
-                                                </button>
-                                            </li>
-                                            <li class="nav-item">
-                                                <button class="nav-link py-2" data-bs-toggle="tab" data-bs-target="#attributes">
-                                                    <i class="ti ti-link me-2"></i>
-                                                    <span class="align-middle">Attributes</span>
-                                                </button>
-                                            </li>
-                                            <li class="nav-item">
-                                                <button class="nav-link py-2" data-bs-toggle="tab" data-bs-target="#advanced">
-                                                    <i class="ti ti-lock me-2"></i>
-                                                    <span class="align-middle">Advanced</span>
-                                                </button>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
                                 <!-- /Navigation -->
                                 <!-- Options -->
                                 <div class="col-12 col-md-8 pt-4 pt-md-0">
@@ -214,17 +101,12 @@
                                                             name="quantity"
                                                             aria-label="Quantity" />
                                                 </div>
-                                                <div class="col-12 col-sm-3">
-                                                    <button class="btn btn-primary align-items-center">
-                                                        <i class="ti ti-check me-2 ti-xs"></i>Confirm
-                                                    </button>
-                                                </div>
                                             </div>
                                             <div>
                                                 <p class="mb-1"><span class="h6">Product in stock now: </span> <span>54</span></p>
                                                 <p class="mb-1"><span class="h6">Product in transit: </span> <span>390</span></p>
                                                 <p class="mb-1">
-                                                    <span class="h6">Last time restocked: </span> <span>24th June, 2023</span>
+                                                    <span class="h6">Last time restocked: </span> <span>24th June 2023</span>
                                                 </p>
                                                 <p class="mb-1">
                                                     <span class="h6">Total stock over lifetime: </span> <span>2430</span>
@@ -396,45 +278,29 @@
                         <div class="card-body">
                             <!-- Base Price -->
                             <div class="mb-3">
-                                <label class="form-label" for="ecommerce-product-price">Base Price</label>
+                                <label class="form-label" for="ecommerce-product-price">Price</label>
                                 <input
                                         type="number"
                                         class="form-control"
                                         id="ecommerce-product-price"
+                                        th:value="${product.price}"
                                         placeholder="Price"
-                                        name="productPrice"
+                                        name="price"
                                         aria-label="Product price" />
                             </div>
                             <!-- Discounted Price -->
                             <div class="mb-3">
-                                <label class="form-label" for="ecommerce-product-discount-price">Discounted Price</label>
+                                <label class="form-label" for="ecommerce-product-discount-price">Quantity</label>
                                 <input
                                         type="number"
                                         class="form-control"
                                         id="ecommerce-product-discount-price"
+                                        th:value="${product.qty}"
                                         placeholder="Discounted Price"
-                                        name="productDiscountedPrice"
+                                        name="qty"
                                         aria-label="Product discounted price" />
                             </div>
                             <!-- Charge tax check box -->
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="price-charge-tax" checked />
-                                <label class="form-label" for="price-charge-tax"> Charge tax on this product </label>
-                            </div>
-                            <!-- Instock switch -->
-                            <div class="d-flex justify-content-between align-items-center border-top pt-3">
-                                <h6 class="mb-0">In stock</h6>
-                                <div class="w-25 d-flex justify-content-end">
-                                    <label class="switch switch-primary switch-sm me-4 pe-2">
-                                        <input type="checkbox" class="switch-input" checked="" />
-                                        <span class="switch-toggle-slider">
-                                <span class="switch-on">
-                                  <span class="switch-off"></span>
-                                </span>
-                              </span>
-                                    </label>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <!-- /Pricing Card -->
@@ -446,59 +312,28 @@
                         <div class="card-body">
                             <!-- Vendor -->
                             <div class="mb-3 col ecommerce-select2-dropdown">
-                                <label class="form-label mb-1" for="vendor"> Vendor </label>
-                                <select id="vendor" class="select2 form-select" data-placeholder="Select Vendor">
-                                    <option value="">Select Vendor</option>
-                                    <option value="men-clothing">Men's Clothing</option>
-                                    <option value="women-clothing">Women's-clothing</option>
-                                    <option value="kid-clothing">Kid's-clothing</option>
-                                </select>
+                                <label class="form-label mb-1" for="productBrand">Product Brand </label>
+                                <input type="text" class="form-control" id="productBrand" name="productBrand" th:value="${product.productBrand}" placeholder="Image">
                             </div>
                             <!-- Category -->
-                            <div class="mb-3 col ecommerce-select2-dropdown">
-                                <label
-                                        class="form-label mb-1 d-flex justify-content-between align-items-center"
+                            <div class="mb-3 col">
+                                <label class="form-label mb-1 d-flex justify-content-between align-items-center"
                                         for="category-org">
                                     <span>Category</span><a href="javascript:void(0);" class="fw-medium">Add new category</a>
                                 </label>
-                                <select id="category-org" class="select2 form-select" data-placeholder="Select Category">
-                                    <option value="">Select Category</option>
-                                    <option value="Household">Household</option>
-                                    <option value="Management">Management</option>
-                                    <option value="Electronics">Electronics</option>
-                                    <option value="Office">Office</option>
-                                    <option value="Automotive">Automotive</option>
-                                </select>
+                                <input type="number" class="form-control" id="category-org" name="category" th:value="${product.category}" placeholder="Category Name">
                             </div>
                             <!-- Collection -->
                             <div class="mb-3 col ecommerce-select2-dropdown">
-                                <label class="form-label mb-1" for="collection">Collection </label>
-                                <select id="collection" class="select2 form-select" data-placeholder="Collection">
-                                    <option value="">Collection</option>
-                                    <option value="men-clothing">Men's Clothing</option>
-                                    <option value="women-clothing">Women's-clothing</option>
-                                    <option value="kid-clothing">Kid's-clothing</option>
-                                </select>
+                                <label class="form-label mb-1" for="image">Image </label>
+                                <input type="text" class="form-control" id="image" name="image" th:value="${product.image}" placeholder="Image">
                             </div>
                             <!-- Status -->
                             <div class="mb-3 col ecommerce-select2-dropdown">
                                 <label class="form-label mb-1" for="status-org">Status </label>
-                                <select id="status-org" class="select2 form-select" data-placeholder="Published">
-                                    <option value="">Published</option>
-                                    <option value="Published">Published</option>
-                                    <option value="Scheduled">Scheduled</option>
-                                    <option value="Inactive">Inactive</option>
-                                </select>
+                                <input type="number" class="form-control" id="status-org" name="status" th:value="${product.status}">
                             </div>
                             <!-- Tags -->
-                            <div class="mb-3">
-                                <label for="ecommerce-product-tags" class="form-label mb-1">Tags</label>
-                                <input id="ecommerce-product-tags"
-                                       class="form-control"
-                                       name="ecommerce-product-tags"
-                                       value="Normal,Standard,Premium"
-                                       aria-label="Product Tags" />
-                            </div>
                         </div>
                     </div>
                     <!-- /Organize Card -->
